src/core-crm/objects/Outreach_Case__e/Outreach_Case__e.object-meta.xml
<CustomObject>
    <label>Outreach Case Batch Complete</label>
    <pluralLabel>Outreach Case Batch Completes</pluralLabel>
</CustomObject>