src/core-crm/objects/Outreach_Case__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <label>Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>