src/core-crm/objects/Outreach_Case__e/fields/Case_Id_String__c.field-meta.xml
<CustomField>
    <fullName>Case_Id_String__c</fullName>
    <label>Case Id String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>