src/core-crm/objects/Outreach_Case__e/fields/Case_No__c.field-meta.xml
<CustomField>
    <fullName>Case_No__c</fullName>
    <label>Case No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>