src/core-crm/objects/Outreach_Case__e/fields/Existing_Outreach_Case_Ids__c.field-meta.xml
<CustomField>
    <fullName>Existing_Outreach_Case_Ids__c</fullName>
    <label>Existing Outreach Case Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>