src/core-crm/objects/Outreach_Case__e/fields/Has_Error__c.field-meta.xml
<CustomField>
    <fullName>Has_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is a boolean indicator used for error handling.</description>
    <label>Has Error</label>
    <type>Checkbox</type>
</CustomField>