src/core-crm/objects/Outreach_Case__e/fields/New_Outreach_Case_Ids__c.field-meta.xml
<CustomField>
    <fullName>New_Outreach_Case_Ids__c</fullName>
    <label>New Outreach Case Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>