src/core-crm/objects/Outreach_Case__e/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>